--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.14)
 
 project(Tests LANGUAGES CXX)
 
-add_subdirectory(test_modeltonguetwisters)
+# add_subdirectory(test_modeltonguetwisters)
+add_subdirectory(test_dbmanager)
